<resources>
    <string-array name="income">
        <item>@string/siblings_1</item>
        <item>@string/siblings_2</item>
        <item>@string/siblings_3</item>
    </string-array>
    <string-array name="streams">
        <item>@string/stream1</item>
        <item>@string/stream2</item>
        <item>@string/stream3</item>
        <item>@string/stream4</item>
        <item>@string/stream5</item>
        <item>@string/stream6</item>
        <item>@string/stream7</item>
        <item>@string/stream8</item>
        <item>@string/stream9</item>
        <item>@string/stream10</item>


    </string-array>
    <string name="stream1">Mechanical</string>
    <string name="stream2">	ComputerScience</string>
    <string name="stream3">Civil</string>
    <string name="stream4">Electronics and Communications</string>
    <string name="stream5">Electrical</string>
    <string name="stream6">Aerospace</string>
    <string name="stream7">Biotech</string>
    <string name="stream8">Finance Management</string>
    <string name="stream9">HR Management</string>
    <string name="stream10">Entrepreneurship Management</string>
    <string name="stream11">&lt;1 Lakh</string>
    <string name="stream13">&lt;1 Lakh</string>
    <string name="stream14">&lt;1 Lakh</string>
    <string name="stream15">&lt;1 Lakh</string>
    <string name="stream16">&lt;1 Lakh</string>
    <string name="stream17">&lt;1 Lakh</string>
    <string name="siblings_1">&lt;1 Lakh</string>
    <string name="siblings_2">1 Lakh - 5 Lakhs</string>
    <string name="siblings_3">&gt;5 Lakhs</string>
    <string name="app_name">Yantra</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="tab_1">Search</string>
    <string name="tab_2">Home</string>
    <string name="tab_3">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="titleA">Search</string>
    <string name="titleC">Profile</string>
    <string name="titleB">Home</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="game5_instruction">Select 3 important valued choices and state reason for your selection. This is just to understand you better. There is nothing wrong or right in your choice.</string>
    <string name="start">GOT IT</string>
    <string name="skip_title">Do you really want to skip?</string>
    <string name="skip_content">If you skip then we will not have enough data for complete analysis.</string>
    <string name="exit_title">Do you really want to exit?</string>
    <string name="exit_content">If you exit then we will not have enough data for complete analysis.</string>
    <string name="skip_button">Skip</string>
    <string name="resume">Resume</string>
    <string name="disclaimer_general"><b>Disclaimer: </b> The results are only indicative and has been generated based on data that has been provided and the company or any authorized representative of the company shall in no case be liable for failure in any course of study or activity recommended in the report. </string>
    <string name="disclaimer_career"><b>Disclaimer: </b> The results are only indicative and has been generated based on data that has been provided and the company or any authorized representative of the company shall in no case be liable for failure in any course of study or activity recommended in the report. We recommend you to launch your child’s career with us and get effective results with the help of 1:1 personal scientific guidance.</string>
    <string name="skills">e.g. I would like to improve my child’s mathematical skills.</string>
    <string name="benefits1">To direct your career in specified direction e.g. engineering or doctor based your his strength.</string>
    <string name="benefits2">To improve suggestive toys or games under our “Advice For Students” section on our app.</string>
    <string name="benefits3">To get in-depth details of your abilities and to understand your hidden potential e.g. Communication skills is quite dominant along-with his IQ.</string>
    <string name="benefits4">To understand split distribution of his specific intelligence factor e.g. In case of Intelligence factor, his Problem-solving skills is better than his memorization or concentration.

</string>
    <string name="quest11">Please write down below mentioned text on \'line\' Sheet of paper in his/her own handwriting and upload it here.</string>
    <string name="quest12">Text: The quick brown fox jumps over the lazy dog. 
</string>
    <string name="game9_instruction">Use your brain to answer these specifically designed smart questions. This game will test mainly 2 skills: Spatial Intelligence and Smartness Quotient.</string>
    <string name="sample">Sample</string>
    <string name="quest1">Q1. You become quite defensive or start giving explanation when being criticized or being scolded for mistake.</string>
    <string name="quest2">Q2. You stay calm under pressure.[e.g. Exam Stress ] and can handle difficult situation effectively [e.g. scolded by teacher ] </string>
    <string name="quest4">Q4. You recognize how your behavior affects others and do understand emotions or sentiments of other person.</string>
    <string name="quest5">Q5. You love company of your friends and relatives and eagerly wait for moment to get together.</string>
    <string name="quest6">Q6. Which of the following stands true about you? (You can select multiple options)</string>
    <string name="quest7">Q7. You manage emotions like anxiety, stress, anger, and fear in pursuit of a goal (like completing class assignment).
</string>
    <string name="quest3">Q3. You utilizes criticism and other feedback for growth irrespective of position of person like teacher or friend who has given feedback.
</string>
    <string name="quest8">Q8. How much you contribute to your holiday assignment or class assignments?
</string>
    <string name="quest9">Q9. You maintain a sense of humor and maintain a smile of accomplishment.
</string>
    <string name="quest10">Q10. What is your preferred writing hand?</string>
    <string name="benefits5">Evaluated by experts and wetted by more data points like Handwriting analysis.</string>
    <string name="parental_intro_1">You need to answer few behavioral questions, upload your handwriting sample etc.</string>
    <string name="parental_time">This exercise would take just 4-5 mins.</string>
    <string name="secure">Any information shared would be kept strictly confidential.</string>
    <string name="game4_instruction">Try to solve basic mathematical equations in specified time. This game will test mainly 2 skills: Speed and Accuracy.</string>
    <string name="cb1">Get 1:1 personal guidance from expert e.g. To improve your mathematical skills or to relieve you from exam stress.</string>
    <string name="cb2">Get detailed session on career report and seek career guidance.</string>
    <string name="cb3">Entitled for 6 effective video sessions spread over period of 3 months. Continuous monitoring of your progress and improvement.</string>
    <string name="cb4">Get recommended resources or games or toys to improve your skills.
</string>
    <string name="cb5">Get customized game(s) (Unique gaming methodology) to improve your skills e.g. We can create "Number or figures" game to improve your math or can create episodic game to teach you “Value of Money”.</string>
    <string name="nameerror">Enter a valid name</string>
    <string name="addresserror">Enter a valid address</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="passerror">Enter a valid password</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="dateerror">Enter a valid date</string>
    <string name="pincodeerror">Enter a valid pincode</string>
    <string name="landerror">Enter a valid landmark</string>
    <string name="descerror">Enter a valid description</string>
    <string name="facebook_app_id">2101739970058763</string>
    <string name="fb_login_protocol_scheme">fb2101739970058763</string>
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="lor">LOR &amp; SOP Builder</string>
    <string name="apply">Apply &amp; Win Scholarships </string>
    <string name="baandcc">Register for BA &amp; CC</string>
    <string name="about_us">Find the best college !!\n\n We created this ultimate guide to the college search because we know finding a school that fits you, truly fits you, is the secret to college success. When you find the right college match, everything else tends to fall into place: your chance of being accepted, your financial aid, your happiness!!
 \n\n\nv4.0\n© Yantra</string>
</resources>