<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
     android:background="#b2b3b3"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
         xmlns:card="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:focusable="true"
        android:clickable="true"
        android:layout_marginBottom="2dp"
        custom:cardCornerRadius="0dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/card1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:orientation="vertical"

            android:background="@drawable/rectangle_purple"
            >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/be"
            android:layout_marginBottom="10dp"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_benefits"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/anylsisreport"

                android:textStyle="bold"
android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="Benefits of Career Report"
                android:textColor="@color/dark_purple"

                android:textSize="20dp"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"

        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_b1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize2"
            android:textColor="@color/dark_purple"
            android:text="@string/benefits1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"

        android:layout_gravity="center_vertical"

        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_b2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize2"
            android:textColor="@color/dark_purple"
            android:text="@string/benefits2"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"

            android:layout_gravity="center_vertical"

            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_b3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize2"
                android:textColor="@color/dark_purple"
                android:text="@string/benefits3"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"

            android:layout_gravity="center_vertical"

            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:id="@+id/b4"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_instructions"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize2"
                android:textColor="@color/dark_purple"

                android:text="@string/benefits4"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"

            android:layout_gravity="center_vertical"
           >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_b5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize2"
                android:textColor="@color/dark_purple"
                android:text="@string/benefits5"/>

        </LinearLayout>



        </LinearLayout>
        </android.support.v7.widget.CardView>

        <include layout="@layout/card_testimonial_layout"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:focusable="true"
            android:clickable="true"
            android:layout_marginBottom="2dp"
            custom:cardCornerRadius="0dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/card4">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:id="@+id/preview"

                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:text="Preview of Career Report"
                    android:textColor="@color/dark_purple"
                    android:textSize="20dp"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >


                <link.fls.swipestack.SwipeStack
                    android:id="@+id/swipeStack"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:padding="35dp"
                    app:stack_rotation="10"
                    app:stack_size="5"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:visibility="gone"
                        android:id="@+id/scrolly"
                        android:gravity="center_horizontal"
                        android:text="Please Scroll Down to get the full 15-16 pages report :)" />
                </RelativeLayout>
                </LinearLayout>


            </android.support.v7.widget.CardView>




        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:focusable="true"
            android:clickable="true"

            android:layout_marginBottom="2dp"
            custom:cardCornerRadius="0dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/card2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize2"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="Click on below button to pay premium and get full 15-16 pages career report"/>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spatialBox"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:id="@+id/payButton"
                app:cardBackgroundColor="@color/filter_blue"
                app:cardElevation="5dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:id="@+id/pay_money"
                    android:text="PAY ₹ 1250/-"
                    android:textColor="@color/white"/>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize2"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="NOTE :Report would be available within 48 hours of payment."/>

        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>